--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -126,9 +126,6 @@
     <ClCompile Include="..\core\cfg\cfg.cpp">
       <Filter>cfg</Filter>
     </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\spg.cpp">
-      <Filter>hw\pvr\emu</Filter>
-    </ClCompile>
     <ClCompile Include="..\core\emitter\x86_emitter.cpp">
       <Filter>emitter</Filter>
     </ClCompile>
@@ -282,18 +279,6 @@
     <ClCompile Include="..\core\deps\libpng\pngwutil.c">
       <Filter>deps\libpng</Filter>
     </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\pvr_regs.cpp">
-      <Filter>hw\pvr\emu\regs</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\pvr_sb_regs.cpp">
-      <Filter>hw\pvr\emu\regs</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\ta.cpp">
-      <Filter>hw\pvr\emu\ta</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\ta_vtx.cpp">
-      <Filter>hw\pvr\emu\tathd</Filter>
-    </ClCompile>
     <ClCompile Include="..\core\rend\gles\gldraw.cpp">
       <Filter>rend\gles</Filter>
     </ClCompile>
@@ -303,14 +288,8 @@
     <ClCompile Include="..\core\rend\gles\gltex.cpp">
       <Filter>rend\gles</Filter>
     </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\ta_ctx.cpp">
-      <Filter>hw\pvr\cntx</Filter>
-    </ClCompile>
     <ClCompile Include="..\core\rend\TexCache.cpp">
       <Filter>rend</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\hw\pvr\pvr_mem.cpp">
-      <Filter>hw\pvr\emu</Filter>
     </ClCompile>
     <ClCompile Include="..\core\rend\d3d11\d3d11.cpp">
       <Filter>rend\d3d11</Filter>
@@ -426,17 +405,54 @@
     <ClCompile Include="..\core\cfg\ini.cpp">
       <Filter>cfg</Filter>
     </ClCompile>
-    <ClCompile Include="..\core\deps\xbrz\xbrz.cpp" />
-    <ClCompile Include="..\core\hw\aica\dsp_interp.cpp" />
-    <ClCompile Include="..\core\hw\modem\modem.cpp" />
-    <ClCompile Include="..\core\hw\modem\picoppp.cpp" />
-    <ClCompile Include="..\core\rend\gl4\abuffer.cpp" />
-    <ClCompile Include="..\core\rend\gl4\gldraw.cpp" />
-    <ClCompile Include="..\core\rend\gl4\gles.cpp" />
-    <ClCompile Include="..\core\rend\gl4\gltex.cpp" />
     <ClCompile Include="..\core\serialize.cpp" />
     <ClCompile Include="..\core\deps\xxhash\xxhash.c">
       <Filter>deps\xxhash</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\rend\gl4\abuffer.cpp">
+      <Filter>rend\gl4</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\rend\gl4\gldraw.cpp">
+      <Filter>rend\gl4</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\rend\gl4\gles.cpp">
+      <Filter>rend\gl4</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\rend\gl4\gltex.cpp">
+      <Filter>rend\gl4</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\aica\dsp_interp.cpp">
+      <Filter>hw\aica</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\modem\modem.cpp">
+      <Filter>hw\modem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\modem\picoppp.cpp">
+      <Filter>hw\modem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\deps\xbrz\xbrz.cpp">
+      <Filter>deps\xbrz</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\ta_vtx.cpp">
+      <Filter>hw\pvr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\ta_ctx.cpp">
+      <Filter>hw\pvr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\pvr_mem.cpp">
+      <Filter>hw\pvr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\pvr_regs.cpp">
+      <Filter>hw\pvr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\pvr_sb_regs.cpp">
+      <Filter>hw\pvr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\spg.cpp">
+      <Filter>hw\pvr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\pvr\ta.cpp">
+      <Filter>hw\pvr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -485,9 +501,6 @@
     <Filter Include="cfg">
       <UniqueIdentifier>{2e4fe5a7-a86c-45cf-b456-39b107a91bc7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="hw\pvr\emu">
-      <UniqueIdentifier>{7e03a227-4e9d-4727-a474-6aacf1e48642}</UniqueIdentifier>
-    </Filter>
     <Filter Include="hw\sh4\modules">
       <UniqueIdentifier>{369d7f53-be71-4055-a303-675f1132b118}</UniqueIdentifier>
     </Filter>
@@ -523,18 +536,6 @@
     </Filter>
     <Filter Include="deps\libpng">
       <UniqueIdentifier>{fa363b78-585a-476a-9afc-628b0f6650cf}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="hw\pvr\emu\regs">
-      <UniqueIdentifier>{7a950feb-a22e-4407-805a-3eb4a22a9c3d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="hw\pvr\emu\ta">
-      <UniqueIdentifier>{874a26cd-41bf-42c8-8815-16df557afea0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="hw\pvr\emu\tathd">
-      <UniqueIdentifier>{480ee015-fc98-45e5-a759-87ff8fc3ee85}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="hw\pvr\cntx">
-      <UniqueIdentifier>{8636de32-e2de-49b1-84d5-85e4c06de52f}</UniqueIdentifier>
     </Filter>
     <Filter Include="rend">
       <UniqueIdentifier>{3f5c03ee-36db-4818-b0d2-4eec9c084f75}</UniqueIdentifier>
@@ -577,6 +578,15 @@
     </Filter>
     <Filter Include="deps\xxhash">
       <UniqueIdentifier>{83d7e5cc-cbd2-40e3-b2c0-79cc53b1dd9a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="rend\gl4">
+      <UniqueIdentifier>{e9e574e5-cce8-467b-8457-acf3999240c1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\xbrz">
+      <UniqueIdentifier>{c1ffb17b-f29e-466a-a6a6-e93aa1bb2ca7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="hw\modem">
+      <UniqueIdentifier>{a67aece4-e47f-48a2-8944-6afbe679a5fb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -721,12 +731,6 @@
       <Filter>cfg</Filter>
     </ClInclude>
     <ClInclude Include="..\core\build.h" />
-    <ClInclude Include="..\core\hw\dc.h">
-      <Filter>hw</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\spg.h">
-      <Filter>hw\pvr\emu</Filter>
-    </ClInclude>
     <ClInclude Include="..\core\emitter\generated_class_names.h">
       <Filter>emitter</Filter>
     </ClInclude>
@@ -868,35 +872,14 @@
     <ClInclude Include="..\core\deps\libpng\pngpriv.h">
       <Filter>deps\libpng</Filter>
     </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\pvr_sb_regs.h">
-      <Filter>hw\pvr\emu\regs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\pvr_regs.h">
-      <Filter>hw\pvr\emu\regs</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\ta.h">
-      <Filter>hw\pvr\emu\ta</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\ta_const_df.h">
-      <Filter>hw\pvr\emu\tathd</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\ta_structs.h">
-      <Filter>hw\pvr\emu\tathd</Filter>
-    </ClInclude>
     <ClInclude Include="..\core\rend\gles\gles.h">
       <Filter>rend\gles</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\ta_ctx.h">
-      <Filter>hw\pvr\cntx</Filter>
     </ClInclude>
     <ClInclude Include="..\core\rend\rend.h">
       <Filter>rend</Filter>
     </ClInclude>
     <ClInclude Include="..\core\rend\TexCache.h">
       <Filter>rend</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\hw\pvr\pvr_mem.h">
-      <Filter>hw\pvr\emu</Filter>
     </ClInclude>
     <ClInclude Include="..\core\deps\libwebsocket\extension-deflate-frame.h">
       <Filter>deps\libwebsocket</Filter>
@@ -955,11 +938,45 @@
     <ClInclude Include="..\core\hw\sh4\modules\mmu_impl.h">
       <Filter>hw\sh4\modules</Filter>
     </ClInclude>
-    <ClInclude Include="..\core\hw\modem\modem.h" />
-    <ClInclude Include="..\core\hw\modem\modem_regs.h" />
-    <ClInclude Include="..\core\hw\modem\picoppp.h" />
-    <ClInclude Include="..\core\rend\gles\glcache.h" />
-    <ClInclude Include="..\core\rend\gl4\gl4.h" />
+    <ClInclude Include="..\core\rend\gl4\gl4.h">
+      <Filter>rend\gl4</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\rend\gles\glcache.h">
+      <Filter>rend\gl4</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\modem\modem.h">
+      <Filter>hw\modem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\modem\modem_regs.h">
+      <Filter>hw\modem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\modem\picoppp.h">
+      <Filter>hw\modem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\ta_const_df.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\ta_structs.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\ta_ctx.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\pvr_mem.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\pvr_regs.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\pvr_sb_regs.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\spg.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\pvr\ta.h">
+      <Filter>hw\pvr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\core\deps\zlib\Makefile">
